--- a/example/init.yml
+++ b/example/init.yml
@@ -1,29 +1,13 @@
 ---
-- hosts: hosts
+- hosts: all
   become: yes
   vars:
-    github_users:
-      # You can specify the `name`:
-      - name: CJerkins
-        groups: sudo
-    github_users_authorized_keys_exclusive: true
+    init_setup_additional_packages:
+      - vim
+      - htop
+    sshkey_url: "https://github.com/Chads.keys"
+    cron_current_job_name: "current git ansible-pull repo location"
+    cron_old_job_name: "old git ansible-pull repo location"
+    cron_job: "date > ~/cron-test.txt" #"ansible-pull"
   roles:
-    - geerlingguy.github-users
-    - init
-
-- hosts: hosts
-  vars:
-    docker_users:
-      - CJerkins
-      - ansible
-  roles:
-    - geerlingguy.docker
-
-
-- hosts: hosts
-  become: yes
-  vars:
-    zerotier_register_short_hostname: true
-  roles:
-    - ansible-role-zerotier
-    # - m4rcu5nl.zerotier-one
+    - ansible_az_init_setup
