--- a/playbook.yml
+++ b/playbook.yml
@@ -11,7 +11,7 @@
     cron_current_job_name: "current git ansible-pull repo location"
     cron_old_job_name: "old git ansible-pull repo location"
     cron_job: "date > ~/cron-test.txt" #"ansible-pull"
-  task:
+  tasks:
     - include: tasks/main.yml
 
 # - hosts: all
