--- a/tasks/2_install.yml
+++ b/tasks/2_install.yml
@@ -10,6 +10,7 @@
     name: "{{ item }}"
   with_items:
     - "{{ init_setup_additional_packages }}"
+    - epel-release
   when: ansible_facts['os_family'] == "RedHat"
 
   
@@ -23,4 +24,5 @@
     name: "{{ item }}"
   with_items:
     - "{{ init_setup_additional_packages }}"
+    - ansible
   when: ansible_facts['os_family'] == "Debian"
