--- a/tasks/1_useradd.yml
+++ b/tasks/1_useradd.yml
@@ -43,11 +43,11 @@
 
 #### Ensure public keys are present ####
 
-- name: Set authorized keys taken from url
-  ansible.posix.authorized_key:
-    user: ansible
-    state: present
-    key: "{{ sshkey_url }}"
+# - name: Set authorized keys taken from url
+#   ansible.posix.authorized_key:
+#     user: ansible
+#     state: present
+#     key: "{{ sshkey_url }}"
 
 
 
